feat: Add dynamic buttons to Google Chat alerts
This commit introduces several improvements to the Google Chat notifications:

- **Contextual Buttons:** The "View in Portainer" button now only appears on Docker-related alerts, and a new "View in Nginx" button appears on SSL-related alerts. This provides more relevant actions for each notification.
- **Configuration:** The URLs for Portainer and Nginx Proxy Manager are now configured in `config.yml`, making them easier to manage.
- **Test Message:** The `main.py --test` command now sends a simple confirmation message without any buttons, which is its intended purpose.
- **Documentation:** The documentation files have been moved to the `docs/` directory for better organization.

--- a/config.example.yml
+++ b/config.example.yml
@@ -82,6 +82,14 @@ backup:
   max_age_hours: 25
 
 # -----------------------------------------------------------------------------
+# Nginx Proxy Manager Integration
+# -----------------------------------------------------------------------------
+nginx_proxy_manager:
+  # The public URL for your Nginx Proxy Manager instance.
+  # This will be used for a button in SSL expiry alerts.
+  url: "https://proxy.pinoyseoul.com:81"
+
+# -----------------------------------------------------------------------------
 # Portainer Integration
 # -----------------------------------------------------------------------------
 portainer:
