--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ PyYAML==6.0.1
 
 # Used for loading environment variables from .env files
 python-dotenv==1.0.1
+
+# Used for timezone handling
+pytz==2024.1
