fix(monitor): Resolve backup false alarms and improve robustness
This commit addresses an issue where the backup monitor was producing false alarms due to a timezone-related bug.

- Fixed a critical bug in the backup age calculation by ensuring all time comparisons are done in UTC.
- Improved the backup check to verify that the backup file meets a minimum size threshold, preventing silent failures from incomplete backups.
- Made the  path an explicit configuration in  instead of a hardcoded default.
- Removed an obsolete  script to reduce confusion.

--- a/config.example.yml
+++ b/config.example.yml
@@ -84,6 +84,8 @@ backup:
   log_path: "/home/pinoyseoul/backups/rclone_backup.log"
   # The directory where local backup archives are stored (for potential future checks).
   backup_dir: "/home/pinoyseoul/backups"
+  # The rclone remote and path to check for backups (e.g., "gdrive:MyBackups").
+  rclone_remote: "gdrive:PinoySeoul-Backups"
   # The minimum acceptable size for a backup in Megabytes (MB).
   # If a backup is smaller than this, a CRITICAL alert will be sent.
   min_size_mb: 50
