fix(schedule): Correct nightly summary scheduling
This commit fixes a bug where the nightly listener summary was not running at its scheduled time.

- The listener summary schedule has been moved to the central  block in the configuration for consistency.
- The main script has been updated to read the schedule from the correct, centralized location.

--- a/config.example.yml
+++ b/config.example.yml
@@ -32,6 +32,8 @@ schedule:
   # What time to send the daily summary report.
   # Use 24-hour format. Timezone is handled by the server (e.g., set to Manila time).
   daily_summary_time: "09:00"
+  # What time to send the AzuraCast daily listener summary report.
+  listener_summary_time: "21:00"
 
 # -----------------------------------------------------------------------------
 # Docker Monitoring
@@ -105,8 +107,6 @@ azuracast:
   station_id: 1
   # The user-friendly name of your station for alerts.
   station_name: "Pinoy Seoul Radio"
-  # The time to send the daily listener summary report (24-hour format).
-  daily_summary_time: "21:00"
 
 # -----------------------------------------------------------------------------
 # Nginx Proxy Manager Integration
