fix(monitor): Resolve multiple operational issues
This commit addresses several issues reported by the user:

- **Listener Summary:** Fixes a typo in the AzuraCast monitor that prevented the 9pm listener summary from running.
- **Backup Failures:** Resolves backup check failures by correctly configuring the  path in the main .
- **Unwanted Alerts:** Implements a new 'maintenance window' feature to suppress alerts during scheduled daily restarts, preventing false 'auto-recovery' notifications. The documentation and example configuration have been updated to reflect this new feature.

--- a/config.example.yml
+++ b/config.example.yml
@@ -10,6 +10,19 @@ general:
   timezone: "Asia/Manila"
 
 # -----------------------------------------------------------------------------
+# Maintenance Window
+# -----------------------------------------------------------------------------
+maintenance:
+  # Enable this to suppress certain non-critical alerts during a specific time.
+  # This is useful for preventing "auto-recovery" notices during scheduled daily
+  # server restarts or backup windows.
+  enabled: true
+  # The time to start the maintenance window (24-hour format).
+  start_time: "02:00"
+  # The time to end the maintenance window (24-hour format).
+  end_time: "02:15"
+
+# -----------------------------------------------------------------------------
 # Google Chat Integration
 # -----------------------------------------------------------------------------
 google_chat:
